# array_vis_bench

./: .gitignore  Cargo.toml  SORT_REGISTRY_README.md  files.txt  generated_registrations.rs
benches/: benches.rs
generate_registration/: Cargo.toml
generate_registration/src/: main.rs
sort_registry_macro/: Cargo.toml
sort_registry_macro/src/: lib.rs
src/: lib.rs  main.rs
src/benchmark/: adaptive_benchmark.rs  array_generators.rs  benchmark_runner.rs  data_types.rs  metrics.rs  mod.rs
src/macros/: mod.rs
src/python_scripts/: empty_tmp_folder.py  pngs_to_vid.py
src/rotations/: rotate.rs
src/sort_test/: general_test.rs  mod.rs
src/sorts/: bubble_sort.rs  example_generic_sort.rs  insertion_sort.rs  mod.rs
src/sorts/bubble_sorts/: bubble_sort.rs  bubble_sort_recursive.rs  mod.rs  odd_even_bubble_sort.rs  shaker_sort.rs
src/sorts/circle_sorts/: bottom_up_shaker_circle_sort.rs  circle_sort_bottom_up.rs  circle_sort_bottom_up_increasing_size.rs  circle_sort_bottom_up_optimised.rs  circle_sort_recursive.rs  circle_sort_recursive_increasing_size.rs  circle_sort_recursive_optimised.rs  mod.rs  shaker_circle_sort.rs  shaker_circle_sort_bottom_up.rs  shaker_circle_sort_bottom_up_b.rs  stooge_circle_sort.rs  stooge_circle_sort_reversed.rs
src/sorts/comb_sorts/: comb_classic.rs  comb_random_gaps.rs  comb_rec.rs  mod.rs
src/sorts/cycle_sorts/: cycle_sort.rs  mod.rs
src/sorts/fun_sorts/: mod.rs  (+11 more)
src/traits/: log_traits.rs  mod.rs  sort_traits.rs
src/utils/: array_gen.rs  check_utils.rs  mod.rs
src/visualise/: img_tmp.rs  mod.rs  sub_image.rs  tmp.rs
(+67 files in other folders)
