[package]
name = "array_vis_bench"
version = "0.1.0"
edition = "2021"

[lib]
name = "array_vis_bench"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"
image = "0.24.7"
rayon = "1.8.0"
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
html_reports = true
opt-level = 3
