[package]
name = "array_vis_bench"
version = "0.1.0"
edition = "2021"
default-run = "array_vis_bench"

[lib]
name = "array_vis_bench"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[dependencies]
rand = "0.8"
lazy_static = "1.4.0"
image = "0.24"
rayon = "1.7"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sort_registry_macro = { path = "./sort_registry_macro" }
ctor = "0.2"
#gif = "0.13.1"

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.bench]
html_reports = true
opt-level = 3
